# gmail-cleaner

./: CLAUDE.md  README.md  pyproject.toml
claude/code_review/: 2026-04-16_delete-commands.md
claude/plans/: 2026-04-13_login-whoami-logout.md  2026-04-13_old-labels-list-query.md  2026-04-14_delete-commands.md  2026-04-17_export-inbox.md  2026-04-20_filter-commands.md
claude/specs/: 2026-04-13_login-whoami-logout.md  2026-04-13_old-labels-list-query.md  2026-04-14_delete-commands.md  2026-04-17_export-inbox.md  2026-04-19_filter-commands.md
docs/: roadmap.md
gmail_cleaner/: auth.py  cleanup.py  cli.py  export.py  filters.py  gmail.py  labels.py
gmail_cleaner/commands/: _progress.py  archive_query.py  create_filter.py  create_label.py  delete_filter.py  delete_label.py  delete_query.py  export_inbox.py  get_filter.py  label_query.py  list_filters.py  list_labels.py  list_query.py  login.py  logout.py  old_labels.py  whoami.py
tests/: auth.py  cleanup.py  export.py  filters.py  fixtures.py  gmail.py  labels.py  test_auth.py  test_cleanup.py  test_export.py  test_filters.py  test_gmail.py  test_labels.py
tests/commands/: archive_query.py  create_filter.py  create_label.py  delete_filter.py  delete_label.py  delete_query.py  export_inbox.py  get_filter.py  label_query.py  list_filters.py  list_labels.py  list_query.py  login.py  logout.py  old_labels.py  progress.py  test_archive_query.py  test_create_filter.py  test_create_label.py  test_delete_filter.py  test_delete_label.py  test_delete_query.py  test_export_inbox.py  test_get_filter.py  test_label_query.py  test_list_filters.py  test_list_labels.py  test_list_query.py  test_login.py  test_logout.py  test_old_labels.py  test_progress.py  test_whoami.py  whoami.py
