[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-cleaner"
version = "0.1.0"
description = "A set of command line tools for cleaning GMail"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "typer>=0.24.1",
]

[project.scripts]
gmc = "gmail_cleaner.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    {include-group = "test"},
    "ipython",
]
test = [
    "mypy",
    "pytest",
    "pytest-unmagic",
    "ruff",
]

[tool.uv]
package = true

[tool.uv.sources]
pytest-unmagic = { git = "https://github.com/kaapstorm/pytest-unmagic.git", branch = "nh/docs_5" }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
